--- a/index.html
+++ b/index.html
@@ -1,2 +1,152 @@
-<link rel="stylesheet" href="style.css">
-<script src="script.js" defer></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fitzone Gym</title>
+
+  <!-- GOOGLE FONT -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- INLINE CSS -->
+  <style>
+    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
+    body{background:#f5f5f5;color:#111;}
+
+    /* NAVBAR */
+    nav{
+      position:fixed;
+      top:0;
+      width:100%;
+      background:#fff;
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
+      padding:12px 20px;
+      box-shadow:0 2px 10px rgba(0,0,0,0.1);
+      z-index:1000;
+    }
+    nav h1{font-size:20px;font-weight:700;}
+    .login-btn{background:#111;color:#fff;border:none;padding:8px 18px;border-radius:20px;}
+
+    /* HERO */
+    .hero{
+      height:100vh;
+      background:
+      linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),
+      url("https://images.unsplash.com/photo-1716367840407-f9414a84b325?auto=format&fit=crop&w=1400&q=80") center/cover no-repeat;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+    }
+    .hero-box{
+      background:rgba(255,255,255,0.95);
+      padding:30px;
+      border-radius:20px;
+      animation:fadeUp 1.5s ease;
+    }
+    .hero-box h2{font-size:26px;font-weight:700;margin-bottom:10px;}
+    .hero-box p{margin-bottom:20px;font-size:16px;}
+    .cta{background:#111;color:#fff;padding:10px 22px;border-radius:30px;text-decoration:none;display:inline-block;}
+
+    /* SERVICES */
+    .services{padding:70px 20px;}
+    .section-title{text-align:center;margin-bottom:30px;font-size:22px;}
+    .cards{display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:20px;}
+    .card{
+      background:#fff;
+      padding:25px;
+      text-align:center;
+      border-radius:15px;
+      box-shadow:0 8px 20px rgba(0,0,0,0.08);
+      animation:fadeUp 1.3s ease;
+      font-weight:600;
+      font-size:16px;
+    }
+
+    /* MOTIVATION */
+    .motivation{
+      background:#111;
+      color:#fff;
+      padding:60px 20px;
+      text-align:center;
+      font-size:22px;
+    }
+
+    /* CONTACT */
+    .contact{padding:70px 20px;text-align:center;}
+    .contact a{
+      display:inline-block;
+      margin:10px;
+      background:#111;
+      color:#fff;
+      padding:12px 22px;
+      border-radius:30px;
+      text-decoration:none;
+    }
+
+    /* ANIMATION */
+    @keyframes fadeUp{
+      from{opacity:0;transform:translateY(40px);}
+      to{opacity:1;transform:translateY(0);}
+    }
+  </style>
+</head>
+
+<body>
+
+  <!-- NAVBAR -->
+  <nav>
+    <h1>Fitzone Gym</h1>
+    <button class="login-btn">Login</button>
+  </nav>
+
+  <!-- HERO -->
+  <section class="hero">
+    <div class="hero-box">
+      <h2>Build Your Body<br>Build Your Confidence</h2>
+      <p>Modern gym • Expert trainers • Real results</p>
+      <a href="#contact" class="cta">Join Now</a>
+    </div>
+  </section>
+
+  <!-- SERVICES -->
+  <section class="services">
+    <h2 class="section-title">Our Services</h2>
+    <div class="cards">
+      <div class="card">💪 Weight Training</div>
+      <div class="card">🔥 Fat Loss Program</div>
+      <div class="card">🏃 Cardio Zone</div>
+      <div class="card">🧘 Yoga & Flexibility</div>
+    </div>
+  </section>
+
+  <!-- MOTIVATION -->
+  <section class="motivation">
+    <h2>No Excuses. Just Results.</h2>
+  </section>
+
+  <!-- CONTACT -->
+  <section class="contact" id="contact">
+    <h2 class="section-title">Contact Us</h2>
+    <a href="tel:+91XXXXXXXXXX">📞 Call Now</a>
+    <a href="https://wa.me/91XXXXXXXXXX">💬 WhatsApp</a>
+  </section>
+
+  <!-- INLINE JS -->
+  <script>
+    // Simple scroll animation for cards
+    window.addEventListener("scroll", () => {
+      document.querySelectorAll(".card").forEach(card => {
+        const pos = card.getBoundingClientRect().top;
+        if(pos < window.innerHeight - 50){
+          card.style.opacity="1";
+          card.style.transform="translateY(0)";
+        }
+      });
+    });
+  </script>
+
+</body>
+  </html>
